--- a/snippets/text/text.snippet.styles.scss
+++ b/snippets/text/text.snippet.styles.scss
@@ -1,12 +1,20 @@
+
+
 .title {
   color: #FFF;
   text-align: center;
   font-size: 5rem;
-  font-family: Jost;
+  font-family: jost;
   font-style: normal;
-  font-weight: 700;
+  font-weight: bold;
   line-height: 106.5%;
+  background: linear-gradient(to right, white 30%, rgba(0, 0, 0,  0.4), white 70%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+
 }
+
 .subtitle {
   color: rgba(255, 255, 255, 0.30);
   text-align: center;
@@ -16,4 +24,27 @@
   font-weight: 400;
   line-height: 123%;
   padding: 1rem;
+}
+.normal {
+  color: white;
+  text-align: center;
+  font-size: 15px;
+  font-family: Jost;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 123%;
+  padding: 2rem;
+}
+
+
+
+@media (max-width: 768px) {
+  .title {
+    color: #FFF;
+    text-align: center;
+    font-size: 4rem;
+  }
+  .subtitle{
+    font-size: 12px;
+  }
 }
